# reverie

./: README.md
backend/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/agents/: __init__.py  auth_vertex.py  prompts.py  runner.py  tools.py  workflow.py
backend/controllers/: analytics.py  inventory.py  marketplace.py  pipeline.py  projects.py  webhooks.py
backend/core/: auth.py
backend/database/: __init__.py  connection.py
backend/models/: __init__.py  base.py  item.py  marketplace_listing.py  project.py  user_stats.py
backend/repositories/: __init__.py  inventory_repository.py  marketplace_repository.py  upcycle_repository.py
backend/schemas/: __init__.py  designer.py  execution.py  ideation.py  inventory.py  marketplace.py  verification.py
backend/scripts/: seeding.py
backend/services/: analytics.py  inventory.py  marketplace.py  pipeline.py  projects.py  unifold.py
backend/tests/: test_e2e.py  test_marketplace_e2e.py  test_sewing_guide_full_text.py  test_unifold_sandbox.py
frontend/: .gitignore  fullbackend_implementation.md  next.config.ts  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/marketplace/: marketplace-client.tsx  page.tsx
frontend/src/app/profile/: loading.tsx  page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/upcycle/: loading.tsx  page.tsx
frontend/src/lib/: gamification.ts  utils.ts
(+41 files in other folders)
